--- a/resuem/christian.html
+++ b/resuem/christian.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="main">
-    <div class="chr"><img src="../picture/Picture1.png"></div>
+    <div class="chr"><img src="../../../picture/Picture1.png"></div>
     <h1>Christian M. Escamillan </h1>
     <h3>Address: Blk 65, Lot 1, Area D Purok 2 Brgy Sta Cruz 1,<br>
          San Jose del Monte, Bulacan<br>
