--- a/resuem/king.html
+++ b/resuem/king.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>King</title>
-    <link rel="stylesheet" href="../css/king.css">
+    <link rel="stylesheet" href="../../../css/king.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="king">  
-    <div class="no"><img src="../picture/king.png"></div>
+    <div class="no"><img src="../../../picture/king.png"></div>
     <h1>King James DP. De Guzman</h1>
     <h3>Address: Blk 53, Lot 118, Area H CSJDM Bulacan <br>
         Contact number: 09619320902 <br>
