--- a/resuem/yap.html
+++ b/resuem/yap.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yap </title>
-    <link rel="stylesheet" href="/css/yap.css">
+    <link rel="stylesheet" href="../../../css/yap.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="yapp">
-    <div class="yaap"><img src="/picture/yap.png"></div><br>
+    <div class="yaap"><img src="../../../picture/yap.png"></div><br>
     <h1>Eldrick Zidjian R. Yap</h1>
     <h3>Address: Road V Minuyan IV, Blk 26 lot 8 Road 12 <br>
         Contact number: 09934727701 <br>
