--- a/resuem/yap.html
+++ b/resuem/yap.html
@@ -83,5 +83,5 @@
         09331749204</p>
     </div>
 </body>
-<div class="btm"><button><a href="/index.html">back</a></button></div>
+<div class="btm"><button><a href="../index.html">back</a></button></div>
 </html>
