--- a/resuem/yap.html
+++ b/resuem/yap.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="yapp">
-    <div class="yaap"><img src="../../../picture/yap.png"></div><br>
+    <div class="yaap"><img src="../picture/yap.png"></div><br>
     <h1>Eldrick Zidjian R. Yap</h1>
     <h3>Address: Road V Minuyan IV, Blk 26 lot 8 Road 12 <br>
         Contact number: 09934727701 <br>
