--- a/resuem/pantent.html
+++ b/resuem/pantent.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>pantente</title>
-    <link rel="stylesheet" href="../../../css/pantent.css">
+    <link rel="stylesheet" href="../css/pantent.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="pant">
-    <div class="tnap"><img src="../../../picture/pantent.png"></div>
+    <div class="tnap"><img src="../picture/pantent.png"></div>
     <h1>John Rey A. Patente </h1>
     <h3>Address: Blk 7 Lot 31 Sec 21, PH 3, Pabahay 2000 <br>
         Bgry Muzon, CSJDM BULACAN<br>
@@ -91,5 +91,5 @@ Microsoft Office: Word, PowerPoint, Excel</p>
     09751405103</p>
 </div>
 </body>
-<div class="btm"><button><a href="/index.html">back</a></button></div>
+<div class="btm"><button><a href="../index.html">back</a></button></div>
 </html>
