--- a/resuem/neil.html
+++ b/resuem/neil.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="neil">
-        <div class="nc"> <img src="../../picture/neil.png"></div><br>
+        <div class="nc"> <img src="../picture/neil.png"></div><br>
     <h1>Niel Marveric S. Capundan</h1>
     <h3>Area B Bagong Buhay III Rancho CSJDM, Bulacan <br>
         Mobile +639215003091 <br>
