--- a/resuem/low.html
+++ b/resuem/low.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loow</title>
-    <link rel="stylesheet" href="../../../css/low.css">
+    <link rel="stylesheet" href="../css/low.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="low">
-        <div class="ool"> <img src="../../../picture/low.png"></div>
+        <div class="ool"> <img src="../picture/low.png"></div>
     <h1>Lowel Christian Yares Magtaas</h1>
     <h3>Address: Block 34 Lot 16, Minuyan IV, Road 12, San Jose del Monte, 
         Bulacan<br>
@@ -110,5 +110,5 @@ Caddie</p>
 </p>
 </div>
 </body>
-<div class="btm"><button><a href="/index.html">back</a></button></div>
+<div class="btm"><button><a href="../index.html">back</a></button></div>
 </html>
