--- a/resuem/christian.html
+++ b/resuem/christian.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>christian</title>
-    <link rel="stylesheet" href="../../../css/chris.css"></a>
+    <link rel="stylesheet" href="../css/chris.css"></a>
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="main">
-    <div class="chr"><img src="../../../picture/Picture1.png"></div>
+    <div class="chr"><img src="../picture/Picture1.png"></div>
     <h1>Christian M. Escamillan </h1>
     <h3>Address: Blk 65, Lot 1, Area D Purok 2 Brgy Sta Cruz 1,<br>
          San Jose del Monte, Bulacan<br>
@@ -90,5 +90,5 @@
                     09751405103<br></p>
                 </div>         
         </body>
-    <div class="btm"><button><a href="/index.html">back</a></button></div>
+    <div class="btm"><button><a href="../index.html">back</a></button></div>
 </html>
